--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
+colored = "2.1.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_yaml = "0.9.33"
 tokio = { version = "1.36.0", features = ["full"] }
