--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
 colored = "2.1.0"
+mysql_async = "0.34.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_yaml = "0.9.33"
 tokio = { version = "1.36.0", features = ["full"] }
